feat: remove AutoCloseable